--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
         </div>
       </div>
       <div class="btn-container">
-        <h2>MAIN</h2>
+        <h2 style="cursor: pointer;">MAIN</h2>
         <div class="icon-font" *ngFor="let menu of menuData">
           <button mat-icon-button class="item-content">
             <a class="menu-font">{{ menu.name }}</a>
