--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,6 +15,7 @@
                 max-width: 80px;
                 border-radius: 50%;
                 margin: 20px 15px;
+                cursor: pointer;
             }
 
             .head-txt {
@@ -25,10 +26,12 @@
             .name-txt {
                 color: white;
                 font-size: 22px;
+                cursor: pointer;
             }
 
             .logout {
                 color: rgb(165 165 172);
+                cursor: pointer;
             }
         }
 
@@ -42,11 +45,13 @@
             .following-txt {
                 display: flex;
                 flex-direction: column;
+                cursor: pointer;
             }
 
             .follower-txt {
                 display: flex;
                 flex-direction: column;
+                cursor: pointer;
             }
 
             .social-text {}
