functionality integrate in buttons

--- a/src/app/top/top.component.html
+++ b/src/app/top/top.component.html
@@ -14,14 +14,17 @@
 
 <div class="music-player">
     <audio #audioPlayer [src]="audioUrl"></audio>
-    <button class="btn-common" mat-button><mat-icon class="player-icon">shuffle</mat-icon></button>
+    <button class="btn-common" mat-button (click)="shuffleTracks()"><mat-icon class="player-icon">shuffle</mat-icon></button>
     <button class="btn-common" mat-button (click)="goBackward()"><mat-icon class="player-icon">skip_previous</mat-icon></button>
+    <button class="btn-common" mat-button (click)="fastBackward()"><mat-icon class="player-icon">fast_rewind</mat-icon></button>
     <button class="btn-common" mat-button (click)="playPause()">
         <mat-icon class="player-icon">{{ isPlaying ? 'pause_circle' : 'play_circle' }}</mat-icon></button>      
-    <button class="btn-common" mat-button (click)="goForward()"><mat-icon class="player-icon">skip_next</mat-icon></button>
-    <button class="btn-common" mat-button for="repeat" [(ngModel)]="repeat"><mat-icon class="player-icon">replay</mat-icon></button>
+        <button class="btn-common" mat-button (click)="fastForward()"><mat-icon class="player-icon">fast_forward</mat-icon></button>
+        <button class="btn-common" mat-button (click)="goForward()"><mat-icon class="player-icon">skip_next</mat-icon></button>
+        <button class="btn-common" mat-button [(ngModel)]="repeat" (ngModelChange)="toggleRepeat()"><mat-icon class="player-icon">replay</mat-icon></button>
+      
     <button class="btn-common" mat-button (click)="toggleMute()">
-        <mat-icon class="player-icon">{{ isMute ? 'volume_up' : 'volume_mute' }}</mat-icon>
+        <mat-icon class="player-icon">{{ !isMute ? 'volume_up' : 'volume_off' }}</mat-icon>
       </button>    
-    <input type="range" min="0" max="100" [(ngModel)]="volume" *ngIf="isMute" (input)="changeVolume()">
+    <input type="range" min="0" max="100" [(ngModel)]="volume" *ngIf="!isMute" (input)="changeVolume()">
 </div>
